Refactored code removing unnecessary code2

--- a/CrecheApp/nbproject/project.properties
+++ b/CrecheApp/nbproject/project.properties
@@ -31,24 +31,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javaee6-doc-api.zip=C:\\Users\\Wesleyjohn\\Desktop\\TP_WEB_SERVICE_STUFF\\marksapp\\lib\\javaee-endorsed-api-6.0\\javaee6-doc-api.zip
-file.reference.javax.annotation.jar=C:\\Users\\Wesleyjohn\\Desktop\\TP_WEB_SERVICE_STUFF\\marksapp\\lib\\javaee-endorsed-api-6.0\\javax.annotation.jar
-file.reference.jaxb-api-osgi.jar=C:\\Users\\Wesleyjohn\\Desktop\\TP_WEB_SERVICE_STUFF\\marksapp\\lib\\javaee-endorsed-api-6.0\\jaxb-api-osgi.jar
-file.reference.mysql-connector-java-5.1.25-bin.jar=C:\\install\\connectorJ\\mysql-connector-java-5.1.25\\mysql-connector-java-5.1.25-bin.jar
-file.reference.New_folder-lib=C:\\Users\\Wesleyjohn\\Desktop\\New folder\\lib
-file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar=C:\\Users\\Wesleyjohn\\Desktop\\TP_WEB_SERVICE_STUFF\\marksapp\\lib\\CopyLibs\\org-netbeans-modules-java-j2seproject-copylibstask.jar
-file.reference.webservices-api-osgi.jar=C:\\Users\\Wesleyjohn\\Desktop\\TP_WEB_SERVICE_STUFF\\marksapp\\lib\\javaee-endorsed-api-6.0\\webservices-api-osgi.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar}:\
-    ${file.reference.javax.annotation.jar}:\
-    ${file.reference.jaxb-api-osgi.jar}:\
-    ${file.reference.webservices-api-osgi.jar}:\
-    ${file.reference.javaee6-doc-api.zip}:\
-    ${file.reference.New_folder-lib}:\
-    ${libs.spring-framework400.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.25-bin.jar}
+    ${file.reference.javaee6-doc-api.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
