--- a/CrecheApp/nbproject/project.properties
+++ b/CrecheApp/nbproject/project.properties
@@ -31,11 +31,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.javaee6-doc-api.zip=C:\\Users\\Wesleyjohn\\Desktop\\TP_WEB_SERVICE_STUFF\\marksapp\\lib\\javaee-endorsed-api-6.0\\javaee6-doc-api.zip
+file.reference.mysql-connector-java-5.1.25-bin.jar=C:\\Users\\Wesleyjohn\\Desktop\\mysql-connector-java-5.1.25\\mysql-connector-java-5.1.25\\mysql-connector-java-5.1.25-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.javaee6-doc-api.zip}
+    ${file.reference.javaee6-doc-api.zip}:\
+    ${file.reference.mysql-connector-java-5.1.25-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
