Importing data from MySQL database into jTable

--- a/CrecheApp/nbproject/project.properties
+++ b/CrecheApp/nbproject/project.properties
@@ -30,14 +30,20 @@ dist.jar=${dist.dir}/CrecheApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-dbutils-1.1.jar.zip=C:\\Users\\Wesleyjohn\\Desktop\\commons-dbutils-1.1.jar.zip
+file.reference.commons-dbutils-1.6-src.zip=C:\\Users\\Wesleyjohn\\Desktop\\commons-dbutils-1.6-src.zip
 file.reference.javaee6-doc-api.zip=C:\\Users\\Wesleyjohn\\Desktop\\TP_WEB_SERVICE_STUFF\\marksapp\\lib\\javaee-endorsed-api-6.0\\javaee6-doc-api.zip
 file.reference.mysql-connector-java-5.1.25-bin.jar=C:\\Users\\Wesleyjohn\\Desktop\\mysql-connector-java-5.1.25\\mysql-connector-java-5.1.25\\mysql-connector-java-5.1.25-bin.jar
+file.reference.rs2xml.jar=C:\\Users\\Wesleyjohn\\Desktop\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.javaee6-doc-api.zip}:\
-    ${file.reference.mysql-connector-java-5.1.25-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.25-bin.jar}:\
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.commons-dbutils-1.6-src.zip}:\
+    ${file.reference.commons-dbutils-1.1.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
