Updated some SQL Queries

--- a/CrecheApp/nbproject/project.properties
+++ b/CrecheApp/nbproject/project.properties
@@ -30,11 +30,14 @@ dist.jar=${dist.dir}/CrecheApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-dbutils-1.1.jar=C:\\Users\\karstensc\\Downloads\\commons-dbutils-1.6-src (2)\\commons-dbutils-1.1.jar\\commons-dbutils-1.1.jar
 file.reference.commons-dbutils-1.1.jar.zip=C:\\Users\\Wesleyjohn\\Desktop\\commons-dbutils-1.1.jar.zip
 file.reference.commons-dbutils-1.6-src.zip=C:\\Users\\Wesleyjohn\\Desktop\\commons-dbutils-1.6-src.zip
+file.reference.itextpdf-5.5.3.jar=C:\\Users\\karstensc\\Downloads\\itext-5.5.3\\itextpdf-5.5.3.jar
 file.reference.javaee6-doc-api.zip=C:\\Users\\Wesleyjohn\\Desktop\\TP_WEB_SERVICE_STUFF\\marksapp\\lib\\javaee-endorsed-api-6.0\\javaee6-doc-api.zip
 file.reference.mysql-connector-java-5.1.25-bin.jar=C:\\Users\\Wesleyjohn\\Desktop\\mysql-connector-java-5.1.25\\mysql-connector-java-5.1.25\\mysql-connector-java-5.1.25-bin.jar
 file.reference.rs2xml.jar=C:\\Users\\Wesleyjohn\\Desktop\\rs2xml.jar
+file.reference.rs2xml.jar-1=C:\\Users\\karstensc\\Downloads\\commons-dbutils-1.6-src (2)\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -43,7 +46,10 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.25-bin.jar}:\
     ${file.reference.rs2xml.jar}:\
     ${file.reference.commons-dbutils-1.6-src.zip}:\
-    ${file.reference.commons-dbutils-1.1.jar.zip}
+    ${file.reference.commons-dbutils-1.1.jar.zip}:\
+    ${file.reference.commons-dbutils-1.1.jar}:\
+    ${file.reference.rs2xml.jar-1}:\
+    ${file.reference.itextpdf-5.5.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -68,7 +74,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=com.wesley.creche.client.desktop.RegForm
+main.class=com.wesley.creche.client.desktop.MainFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
